--- a/css/application.css
+++ b/css/application.css
@@ -29,7 +29,7 @@ a {
     color: #222222;
     text-decoration: underline; }
 
-body, a, p, h1, h2, h3, h4, ul, li {
+body, a, p, h1, h2, h3, h4, h5, h6, ul, li {
   margin: 0;
   padding: 0; }
 
@@ -95,21 +95,98 @@ body {
   color: #222222;
   font: normal 125%/1.4 "Open Sans", "Helvetica Neue Light", "Helvetica Neue", "Helvetica", "Arial", sans-serif; }
 
+a {
+  font-size: 0.9rem;
+  color: black; }
+  a:hover {
+    color: #ffb618;
+    text-decoration: none; }
+
+ul {
+  list-style: none; }
+
 nav {
   background: #fff;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5); }
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%; }
   nav ul {
     overflow: auto;
-    padding: 2rem 0;
+    padding: 0;
     width: 100%;
     text-align: center; }
   nav li {
     display: inline-block;
     list-style: none;
-    padding: 0 1rem; }
+    padding: 2rem 1rem 2rem 0; }
+  nav #logo {
+    max-height: 60px;
+    margin: 20px auto;
+    position: absolute;
+    left: 100px; }
 
-a {
-  font-size: 0.9rem;
-  color: #ffb618; }
+.container {
+  width: 980px;
+  margin: 0 auto; }
+
+header {
+  padding: 8rem 0 0 0; }
+  header .heading {
+    text-align: center; }
+    header .heading h1 {
+      font-size: 4rem;
+      font-weight: lighter;
+      line-height: 1em; }
+    header .heading li {
+      display: inline-block;
+      padding: 0 0.5rem; }
+      header .heading li a {
+        font-size: 0.7rem;
+        font-weight: 700;
+        letter-spacing: 0.02rem; }
+    header .heading .category {
+      font-weight: 700;
+      font-size: 0.8rem;
+      letter-spacing: 0.1rem;
+      padding: 0 0 1rem 0; }
+      header .heading .category span {
+        color: #ffb618; }
+    header .heading .byline {
+      margin: 1.5rem 0 0 0;
+      font-weight: 700;
+      font-size: 0.7rem;
+      letter-spacing: 0.02rem;
+      padding: 0 0 1rem 0; }
+
+section {
+  width: 73%; }
+  section p {
+    font-size: 1rem;
+    font-weight: lighter;
+    padding: 0 0 1rem 0;
+    line-height: 1.6rem;
+    letter-spacing: 0.03rem; }
+  section img {
+    max-width: 100%; }
+  section .photo-info {
+    font-size: 0.5em;
+    margin: 0 0 2rem 0; }
+    section .photo-info .caption strong {
+      font-weight: 800; }
+    section .photo-info .credit {
+      float: right; }
+
+aside {
+  width: 25%;
+  float: right; }
+  aside .recent {
+    border-bottom: 1px solid #ffb618; }
+  aside .entry {
+    padding: 1rem 0;
+    border-bottom: 1px solid #d6d6d6; }
+    aside .entry img {
+      width: 100%; }
 
 /*# sourceMappingURL=application.css.map */
