--- a/scss/application.scss
+++ b/scss/application.scss
@@ -8,19 +8,104 @@
 nav {
   background: #fff;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
     ul {
       overflow: auto;
-      padding: 2rem 0;
+      padding: 0;
       width: 100%;
       text-align: center;
     }
     li {
       display: inline-block;
       list-style: none;
-      padding: 0 1rem;
+      padding: 2rem 1rem 2rem 0;
+    }
+    #logo {
+      max-height: 60px;
+      margin: 20px auto;
+      position: absolute;
+      left: 100px;
     }
 }
-a {
-  font-size: 0.9rem;
-  color: #ffb618;
+.container {
+  width: 980px;
+  margin: 0 auto;
+}
+header {
+  padding: 8rem 0 0 0;
+  .heading {
+    text-align: center;
+    h1 {
+      font-size: 4rem;
+      font-weight: lighter;
+      line-height: 1em;
+    }
+    li {
+      display: inline-block;
+      padding: 0 0.5rem;
+      a {
+        font-size: 0.7rem;
+        font-weight: 700;
+        letter-spacing: 0.02rem;
+      }
+    }
+    .category {
+      font-weight: 700;
+      font-size: 0.8rem;
+      letter-spacing: 0.1rem;
+      padding: 0 0 1rem 0;
+      span {
+        color: $yellow-prim;
+      }
+    }
+    .byline {
+      margin: 1.5rem 0 0 0;
+      font-weight: 700;
+      font-size: 0.7rem;
+      letter-spacing: 0.02rem;
+      padding: 0 0 1rem 0;
+    }
+  }
+}
+section {
+  width: 73%;
+  p {
+    font-size: 1rem;
+    font-weight: lighter;
+    padding: 0 0 1rem 0;
+    line-height: 1.6rem;
+    letter-spacing: 0.03rem;
+  }
+  img {
+    max-width: 100%;
+  }
+  .photo-info {
+    font-size: 0.5em;
+    margin: 0 0 2rem 0;
+    .caption {
+      strong {
+        font-weight: 800;
+      }
+    }
+    .credit {
+      float: right;
+    }
+  }
+}
+aside {
+  width: 25%;
+  float: right;
+  .recent {
+    border-bottom: 1px solid $yellow-prim;
+  }
+  .entry {
+    padding: 1rem 0;
+    border-bottom: 1px solid #d6d6d6;
+    img {
+      width: 100%;
+    }
+  }
 }
