--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -5,3 +5,16 @@ body {
   color: $text-color;
   font: normal 125% / 1.4 $text-font-stack;
 }
+
+a {
+  font-size: 0.9rem;
+  color: black;
+  &:hover {
+    color: $yellow-prim;
+    text-decoration: none;
+  }
+}
+
+ul {
+  list-style: none;
+}
