--- a/css/application.css
+++ b/css/application.css
@@ -29,7 +29,7 @@ a {
     color: #222222;
     text-decoration: underline; }
 
-body, a, p, h1, h2, h3, h4, h5, h6, ul, li {
+body, a, p, h1, h2, h3, h4, h5, h6, ul, li, span {
   margin: 0;
   padding: 0; }
 
@@ -188,5 +188,15 @@ aside {
     border-bottom: 1px solid #d6d6d6; }
     aside .entry img {
       width: 100%; }
+    aside .entry h6 {
+      font-size: 0.7rem;
+      font-weight: 700;
+      letter-spacing: 0.02rem;
+      padding: 0 0 0.5rem 0; }
+    aside .entry p {
+      font-size: 0.9rem;
+      font-weight: lighter; }
+    aside .entry span {
+      font-size: 0.5rem; }
 
 /*# sourceMappingURL=application.css.map */
