--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -33,7 +33,7 @@ a {
 }
 
 //RESET
-body, a, p, h1, h2, h3, h4, h5, h6, ul, li {
+body, a, p, h1, h2, h3, h4, h5, h6, ul, li, span {
   margin: 0;
   padding: 0;
 }
