--- a/css/application.css
+++ b/css/application.css
@@ -167,7 +167,9 @@ section {
     font-weight: lighter;
     padding: 0 0 1rem 0;
     line-height: 1.6rem;
-    letter-spacing: 0.03rem; }
+    letter-spacing: 0.04rem; }
+  section p:nth-child(n+15) {
+    padding: 0 0 6em 0; }
   section img {
     max-width: 100%; }
   section .photo-info {
@@ -198,5 +200,41 @@ aside {
       font-weight: lighter; }
     aside .entry span {
       font-size: 0.5rem; }
+
+footer p {
+  font-size: 0.7rem;
+  font-weight: 700;
+  letter-spacing: 0.02rem;
+  width: 10rem;
+  text-align: center;
+  margin: 3rem auto;
+  padding: 1rem;
+  background-color: #ffb618;
+  color: black; }
+footer .input-head li {
+  display: inline-block; }
+footer .input-head li:last-child {
+  float: right; }
+footer .input-head hr:first-of-type {
+  border: none;
+  width: 10%;
+  height: 2px;
+  color: black;
+  background-color: black;
+  float: left; }
+footer .input-head hr:last-of-type {
+  border: none;
+  width: 90%;
+  height: 2px;
+  color: gray;
+  background-color: gray;
+  float: right; }
+footer .input-head form img {
+  float: left; }
+footer .input-head form textarea {
+  float: right;
+  width: 94%;
+  height: 10em;
+  border: 2px solid #c6c6c6; }
 
 /*# sourceMappingURL=application.css.map */
