--- a/scss/application.scss
+++ b/scss/application.scss
@@ -75,7 +75,10 @@ section {
     font-weight: lighter;
     padding: 0 0 1rem 0;
     line-height: 1.6rem;
-    letter-spacing: 0.03rem;
+    letter-spacing: 0.04rem;
+  }
+  p:nth-child(n+15) {
+    padding: 0 0 6em 0;
   }
   img {
     max-width: 100%;
@@ -115,6 +118,54 @@ aside {
     }
     span {
       font-size: 0.5rem
+    }
+  }
+}
+footer {
+  p {
+
+    @include sm-head;
+    width: 10rem;
+    // height: 6em;
+    text-align: center;
+    margin: 3rem auto;
+    padding: 1rem;
+    background-color: $yellow-prim;
+    color: black;
+  }
+  .input-head {
+    li{
+      display: inline-block;
+    }
+    li:last-child {
+      float: right;
+    }
+    hr:first-of-type {
+      border: none;
+      width: 10%;
+      height: 2px;
+      color: black;
+      background-color: black;
+      float: left;
+    }
+    hr:last-of-type {
+      border: none;
+      width: 90%;
+      height: 2px;
+      color: gray;
+      background-color: gray;
+      float: right;
+    }
+    form {
+      img {
+        float: left;
+      }
+      textarea {
+        float: right;
+        width:94%;
+        height: 10em;
+        border: 2px solid $color-pale-gray;
+      }
     }
   }
 }
