finalize nav/style comment form

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -21,3 +21,11 @@ ul {
 hr {
   background-color: $color-pale-gray;
 }
+.callout {
+  font-style: italic;
+  font-family: serif;
+  font-size: 2rem;
+  line-height: 2.2rem; 
+  color: #999999;
+  margin: 2rem 0;
+}
