--- a/css/application.css
+++ b/css/application.css
@@ -17,7 +17,9 @@ html {
  * See: https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
  */
 *, *::before, *::after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0; }
 
 /**
  * Basic styles for links
@@ -28,10 +30,6 @@ a {
   a:hover, a:active, a:focus {
     color: #222222;
     text-decoration: underline; }
-
-body, a, p, h1, h2, h3, h4, h5, h6, ul, li, span {
-  margin: 0;
-  padding: 0; }
 
 /**
  * Clear inner floats
@@ -106,62 +104,87 @@ ul {
   list-style: none; }
 
 hr {
-  background-color: #ccd3d7; }
+  background-color: #80939D; }
+
+.callout {
+  font-style: italic;
+  font-family: serif;
+  font-size: 2rem;
+  line-height: 2.2rem;
+  color: #999999;
+  margin: 2rem 0; }
 
 nav {
   background: #fff;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.15);
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%; }
+  width: 100%;
+  height: 5rem;
+  margin: 0 auto; }
   nav ul {
     overflow: auto;
     padding: 0;
-    width: 100%;
-    text-align: center; }
+    text-align: center;
+    float: left;
+    margin: 0 0 0 8rem; }
   nav li {
     display: inline-block;
     list-style: none;
-    padding: 2rem 1rem 2rem 0; }
+    padding: 1.5rem 0.6rem 0rem 0; }
+    nav li:nth-child(7) {
+      padding: 0 0 0 4rem; }
+    nav li a {
+      font-weight: 800;
+      font-size: 0.8rem;
+      letter-spacing: 0.06rem; }
   nav #logo {
-    max-height: 60px;
-    margin: 20px auto;
-    position: absolute;
-    left: 100px; }
+    margin: 0.8rem 0 auto 0;
+    max-height: 54px;
+    float: left; }
+  nav #mag {
+    float: right; }
 
 .container {
   width: 980px;
   margin: 0 auto; }
 
+.container-extra {
+  max-width: 1080px;
+  margin: 0 auto; }
+
 header {
-  padding: 8rem 0 0 0; }
-  header .heading {
-    text-align: center; }
-    header .heading h1 {
-      font-size: 4rem;
-      font-weight: lighter;
-      line-height: 1em; }
-    header .heading li {
-      display: inline-block;
-      padding: 0 0.5rem; }
-      header .heading li a {
-        font-size: 0.7rem;
-        font-weight: 700;
-        letter-spacing: 0.02rem; }
-    header .heading .category {
-      font-weight: 700;
-      font-size: 0.8rem;
-      letter-spacing: 0.1rem;
-      padding: 0 0 1rem 0; }
-      header .heading .category span {
-        color: #ffb618; }
-    header .heading .byline {
-      margin: 1.5rem 0 0 0;
-      font-weight: 700;
+  padding: 8rem 0 0 0;
+  margin: 0 0 2rem 0;
+  text-align: center; }
+  header h1 {
+    font-size: 4rem;
+    font-weight: lighter;
+    line-height: 1em; }
+  header hr {
+    color: #80939D;
+    height: 1px;
+    border: none; }
+  header li {
+    display: inline-block;
+    padding: 0 0.5rem 0.4rem 0; }
+    header li a {
+      padding: 0;
       font-size: 0.7rem;
-      letter-spacing: 0.02rem;
-      padding: 0 0 1rem 0; }
+      font-weight: 700;
+      letter-spacing: 0.02rem; }
+  header .category {
+    font-weight: 700;
+    font-size: 0.8rem;
+    letter-spacing: 0.1rem;
+    padding: 0 0 1rem 0; }
+    header .category span {
+      color: #ffb618; }
+  header .byline {
+    margin: 1.5rem 0 0 0;
+    font-weight: 700;
+    font-size: 0.7rem;
+    letter-spacing: 0.02rem;
+    padding: 0 0 1rem 0; }
 
 section {
   width: 73%; }
@@ -171,10 +194,13 @@ section {
     padding: 0 0 1rem 0;
     line-height: 1.6rem;
     letter-spacing: 0.04rem; }
+    section p .cap-start {
+      color: #ffb618; }
   section p:nth-child(n+15) {
     padding: 0 0 6em 0; }
   section img {
-    max-width: 100%; }
+    max-width: 100%;
+    height: 100vh; }
   section .photo-info {
     font-size: 0.5em;
     margin: 0 0 2rem 0; }
@@ -210,42 +236,48 @@ footer .join p {
   letter-spacing: 0.02rem;
   width: 10rem;
   text-align: center;
-  margin: 3rem auto;
+  margin: 3rem auto 6rem auto;
   padding: 1rem;
   background-color: #ffb618;
   color: black; }
-footer .input-head li:first-child {
-  color: black; }
-footer .input-head li {
-  display: inline-block;
-  color: #ccd3d7; }
-footer .input-head li:last-child {
-  float: right; }
-footer .input-head hr:first-of-type {
-  border: none;
-  width: 10%;
-  height: 2px;
-  color: black;
-  background-color: black;
-  float: left; }
-footer .input-head hr:last-of-type {
-  border: none;
-  width: 90%;
-  height: 2px;
-  background-color: #ccd3d7;
-  float: right; }
-footer .input-head form img {
-  float: left; }
-footer .input-head form textarea {
-  float: right;
-  width: 94%;
-  height: 3rem;
-  border: 2px solid #ccd3d7;
-  border-radius: 0.4rem; }
-footer .input-head p {
-  color: #a6a9ab;
-  font-size: 1rem;
-  margin: 8rem 0 0 0;
-  text-align: center; }
+footer .input-head {
+  margin: 0 0 2rem 0; }
+  footer .input-head li:first-child {
+    color: black;
+    margin: 0 1rem 0 0; }
+  footer .input-head li {
+    font-size: 1rem;
+    display: inline-block;
+    color: #80939D; }
+  footer .input-head li:last-child {
+    float: right; }
+  footer .input-head hr:first-of-type {
+    border: none;
+    width: 11%;
+    height: 2px;
+    color: black;
+    background-color: black;
+    float: left; }
+  footer .input-head hr:last-of-type {
+    border: none;
+    width: 89%;
+    height: 2px;
+    background-color: #80939D;
+    float: right; }
+  footer .input-head form {
+    margin: 1rem 0 0 0; }
+    footer .input-head form img {
+      float: left; }
+    footer .input-head form textarea {
+      float: right;
+      width: 94%;
+      height: 3rem;
+      border: 2px solid #80939D;
+      border-radius: 0.4rem; }
+  footer .input-head p {
+    color: #a6a9ab;
+    font-size: 1rem;
+    margin: 8rem 0 0 0;
+    text-align: center; }
 
 /*# sourceMappingURL=application.css.map */
