--- a/scss/application.scss
+++ b/scss/application.scss
@@ -7,46 +7,67 @@
 
 nav {
   background: #fff;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.15);
   position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
+  height: 5rem;
+  margin: 0 auto;
     ul {
       overflow: auto;
       padding: 0;
-      width: 100%;
       text-align: center;
+      float: left;
+      margin: 0 0 0 8rem;
     }
     li {
       display: inline-block;
       list-style: none;
-      padding: 2rem 1rem 2rem 0;
+      padding: 1.5rem 0.6rem 0rem 0;
+      &:nth-child(7) {
+        padding: 0 0 0 4rem;
+      }
+      a {
+        font-weight: 800;
+        font-size: 0.8rem;
+        letter-spacing: 0.06rem;
+      }
     }
     #logo {
-      max-height: 60px;
-      margin: 20px auto;
-      position: absolute;
-      left: 100px;
+      margin: 0.8rem 0 auto 0;
+      max-height: 54px;
+      float:left;
+    }
+    #mag {
+      float: right;
     }
 }
 .container {
   width: 980px;
   margin: 0 auto;
 }
+.container-extra {
+  max-width: 1080px;
+  margin: 0 auto;
+}
 header {
   padding: 8rem 0 0 0;
-  .heading {
-    text-align: center;
+  margin: 0 0 2rem 0;
+  text-align: center;
     h1 {
       font-size: 4rem;
       font-weight: lighter;
       line-height: 1em;
     }
+    hr {
+      color: $color-pale-gray;
+      height: 1px;
+      border: none;
+    }
     li {
       display: inline-block;
-      padding: 0 0.5rem;
+      padding: 0 0.5rem 0.4rem 0;
       a {
+        padding: 0;
         @include sm-head;
       }
     }
@@ -67,7 +88,6 @@ header {
       padding: 0 0 1rem 0;
     }
   }
-}
 section {
   width: 73%;
   p {
@@ -76,12 +96,18 @@ section {
     padding: 0 0 1rem 0;
     line-height: 1.6rem;
     letter-spacing: 0.04rem;
+    .cap-start {
+      color: $yellow-prim;
+      // font-size: 5rem;
+      // float: left;
+    }
   }
   p:nth-child(n+15) {
     padding: 0 0 6em 0;
   }
   img {
     max-width: 100%;
+    height: 100vh;
   }
   .photo-info {
     font-size: 0.5em;
@@ -127,16 +153,19 @@ footer {
     width: 10rem;
     // height: 6em;
     text-align: center;
-    margin: 3rem auto;
+    margin: 3rem auto 6rem auto;
     padding: 1rem;
     background-color: $yellow-prim;
     color: black;
   }
   .input-head {
+    margin: 0 0 2rem 0;
     li:first-child {
       color: black;
+      margin: 0 1rem 0 0  ;
     }
     li{
+      font-size: 1rem;
       display: inline-block;
       color: $color-pale-gray;
     }
@@ -145,7 +174,7 @@ footer {
     }
     hr:first-of-type {
       border: none;
-      width: 10%;
+      width: 11%;
       height: 2px;
       color: black;
       background-color: black;
@@ -153,12 +182,13 @@ footer {
     }
     hr:last-of-type {
       border: none;
-      width: 90%;
+      width: 89%;
       height: 2px;
       background-color: $color-pale-gray;
       float: right;
     }
     form {
+      margin: 1rem 0 0 0;
       img {
         float: left;
       }
